<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Asaan</string>
    <string name="fb_asaan_app_id">718517514848212</string>
     <string name="fb_asaan_app_id_rishta">1460267094262357</string>
    <string name="map_key_dev">AIzaSyCpNVfgYL-xlar9t3KJ70UIkVHaZ2MrLU0</string>
    <string name="map_key_dev_khobaib">AIzaSyCIe2Q41ucXLA8HDKyLihSomaIKXcnJ-LM</string>
    <string name="map_key_dev_rishta">AIzaSyBABBulGgoZupttNQTHcLK9x7DZMLAYudM</string>
    <string name="map_key_dev_tanzeer">AIzaSyAqfVbNI2saY9-t6OdGy1bczvJyiKP2h-8</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="validationErrors">Validation Errors</string>
    
    <string name="frontpage_tagline">Discover and share great places with friends.</string>
    <string name="signup_title">Welcome to Asaan! Let\'s start by setting up your account.</string>  
    <string name="profile_page_title">Your name and photo will help the maitre d\' recognize you on arrival .</string> 
    <string name="phone_number_warning">Your number to call or text you regarding your account information.</string> 
    <string name="profile_page_phone_message">Asaan will only use your phone number to call or text you regarding your account information or your transactions through Asaan .</string>
    
    
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_store_menu_list">StoreMenuListActivity</string>
    <string name="title_activity_server_table_list">Table List</string>
    <string name="title_activity_menu_image_gallery">Photo Gallery</string>
    
    <!-- Strings related to Consumer Store Listview -->
    <string name="txt_store_name">Prasino</string>
    <string name="txt_store_details">$$ . American</string>
    <string name="txt_store_distance">0.9M</string>
    <string name="txt_visits">1,340</string>
    <string name="txt_rewards">Happy Hour Thursdays 5&#8211;7PM</string>
    <string name="txt_store_specials_tag">Healthy, organic fare with creative kick</string>
    <string name="action_restaurant_call">Call</string>
    <string name="action_restaurant_msg">Text</string>
    <string name="action_restaurant_menu">Menu</string>
    <string name="action_restaurant_order">Order</string>
    <string name="store_list_row_picinpic_content">Store Image Picture in Picture</string>
    <string name="store_list_row_background_content">Store Image Background</string>
    <string name="store_asaan_locations_not_nearby">No Asaan locations are nearby.</string>
    <string name="title_activity_auth_tab">AuthTabActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_auth_ssosignup_or_login">AuthSSOSignupOrLogin</string>
    <string name="title_activity_auth_signup">AuthSignupActivity</string>
    <string name="location_services_unavailable">Location services are not available - please enable location services to use Asaan</string>
    <string name="title_activity_store_tab">StoreTabActivity</string>
    <string name="title_activity_splash_screen_fragment">SplashScreenFragment</string>
    <string name="txt_server_greeting1">Hi I\'m </string>
    <string name="txt_server_greeting2">. I will be your server tonight.</string>
    <string name="title_no_occupied_tables">No tables are occupied</string>
    <string name="action_table_is_ready">Alert: Table is ready!</string>
    <string name="reservation_maker">Reservation:</string>
    <string name="reservation_maker_example">John Appleseed</string>
    <string name="cust_calling_for_assistance">Need Assistance!</string>
    <string name="cust_needs_check">Check Please</string>
    <string name="cust_is_new">New Customer</string>
    <string name="food_is_ready">Food Ready</string>
    <string name="drinks_are_ready">Drinks Ready</string>
    <string name="table_name">Table</string>
    <string name="server_name">Server</string>
    <string name="close_table">Close Table</string>
    <string name="close_table_progress">Closing &#8230;</string>
    <string name="group_name">Group</string>
    <string name="party_size">Party Size: </string>
    <string name="party_size_example">6</string>
    <string name="table_progress">Progress: </string>
    <string name="table_name_example">Bal23</string>
    <string name="server_name_example">Andy Serwer</string>
    <string name="group_name_example">Bal23_3785</string>
    <string name="POS_ticket_title">POS Ticket:</string>
    <string name="POS_ticket_example">HIG197567</string>
    <string name="menu_category_title">Appetizers</string>
    <string name="food_menu_item_name">Goan Mussels Curry</string>
    <string name="food_menu_item_desc">Mussels in tamarind coconut milk white wine broth</string>
    <string name="food_menu_item_price">$11.00</string>
    <string name="food_menu_item_ranking">#1</string>
    <string name="food_menu_item_ordered_count">People ordered this today</string>
    <string name="food_menu_item_ordered_count_1">Person ordered this today</string>
    <string name="food_is_vegetarian">Menu item is vegetarian</string>
    <string name="food_is_liked">Menu item is liked</string>
    <string name="food_is_spicy">Menu item is spicy</string>
    <string name="food_is_gluten_free">Menu item is gluten free</string>
    <string name="order_quantity">1</string>
    <string name="order_quantity_text">Qty</string>
    <string name="order_quantity_plus" formatted = "false">&gt;</string>
    <string name="order_quantity_minus" formatted = "false"> &lt;</string>
    <string name="title_no_menu_available">Menu for this restaurant has not been uploaded. Please contact the restaurant for further assistance.</string>
    <string name="place_order">Add to Order -</string>
    <string name="additional_options">Additional Options</string>
    <string name="additional_option_name">Add Protein</string>
    <string name="additional_option_1">Chicken</string>
    <string name="special_instructions">Special Instructions</string>
    <string name="special_instructions_example">Example: extra spicy, no cheese, etc.<br/>Additional charges may apply.</string>
    <string name="txt_table_order_title">Items Ordered</string>
    <string name="delete_item">Delete</string>
    <string name="price_title">Price</string>
    <string name="quantity_title">Qty</string>
    <string name="ordered_items_title">Ordered Items</string>
    <string name="title_ordered_items_list">Orders for table </string>
    <string name="menu_category">Menu Categories</string>
    <string name="select_size">Select Size</string>
    <string name="food_delivery_status">Food delivery status</string>
    <string name="gallery_left_arrow">Move to previous menu item image</string>
    <string name="gallery_right_arrow">Move to next menu item image</string>
    <string name="gallery_selected_menu_item">Selected menu item image</string>
    <string name="menu_modifier_title">Happy Hour </string>
    <string name="reset_password_instruction">Enter your email to reset password</string>
    <string name="resturant_title">RESTURANT:</string>
    <string name="cuisine_type_title">CUISINE TYPE:</string>
    <string name="executive_title">EXECUTIVE CHEF:</string>
    <string name="trophies_title">TROPHIES:</string>
    <string name="address">Address:</string>
    <string name="phone">Phone:</string>
    <string name="web">Web:</string>
    <string name="facebook">Facebook:</string>
    <string name="twitter">Twitter:</string>

</resources>