<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:layout_margin="@dimen/margin_10dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/food_menu_item_name" 
        android:textStyle="bold" />
    
    <TextView
        android:id="@+id/txt_item_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/txt_item_name"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/food_menu_item_price"
        android:textStyle="bold" />
    
    <TextView
        android:id="@+id/txt_item_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/txt_item_name"
        android:layout_alignStart="@id/txt_item_name"
		android:layout_below="@id/txt_item_name"
        android:layout_toLeftOf="@id/txt_item_price"
        android:layout_toStartOf="@id/txt_item_price"
		android:layout_marginTop="@dimen/margin_5dp"
        android:layout_marginRight="@dimen/margin_5dp"
        android:layout_marginEnd="@dimen/margin_5dp"
        android:textStyle="italic" />
    
    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignLeft="@id/txt_item_name"
        android:layout_alignStart="@id/txt_item_name"
        android:layout_alignRight="@id/txt_item_price"
        android:layout_alignEnd="@id/txt_item_price"
        android:layout_below="@+id/txt_item_desc"
		android:layout_marginTop="@dimen/margin_5dp"
        android:background="@color/txtGrey" />
    
    <TextView
        android:id="@+id/txt_quantity_title"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignLeft="@id/txt_item_name"
        android:layout_alignStart="@id/txt_item_name"
		android:layout_below="@id/view1"
		android:layout_marginTop="@dimen/margin_5dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/order_quantity_text"
        android:gravity="center" />

    <TextView
        android:id="@+id/txt_plus"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignRight="@id/txt_item_price"
        android:layout_alignEnd="@id/txt_item_price"
        android:layout_alignTop="@id/txt_quantity_title"
        android:background="@color/txtBlue"
        android:ellipsize="end"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/order_quantity_plus"
        android:textColor="@color/txtWhite" />

    <TextView
        android:id="@+id/txt_quantity"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignTop="@id/txt_quantity_title"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_toLeftOf="@id/txt_plus"
        android:layout_toStartOf="@id/txt_plus"
        android:background="@color/txtGrey"
        android:ellipsize="end"
        android:gravity="center"
        android:singleLine="true"
        android:textColor="@color/txtBlack"
        android:text="@string/order_quantity" />

    <TextView
        android:id="@+id/txt_minus"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignTop="@id/txt_quantity_title"
        android:layout_toLeftOf="@id/txt_quantity"
        android:layout_toStartOf="@id/txt_quantity"
        android:background="@color/txtRed"
        android:ellipsize="end"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/order_quantity_minus"
        android:textColor="@color/txtWhite" />
    
    <TextView
        android:id="@+id/txt_additional_options_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/txt_item_name"
        android:layout_alignStart="@id/txt_item_name"
        android:layout_alignRight="@id/txt_item_price"
        android:layout_alignEnd="@id/txt_item_price"
        android:layout_below="@id/txt_plus"
        android:layout_marginTop="@dimen/margin_5dp"
        android:background="@color/txtOrange"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:singleLine="true"
        android:text="@string/additional_options"
        android:textColor="@color/txtWhite"
        android:textStyle="bold" />
    
	<Button
        android:id="@+id/btn_place_order"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/txtLightBlue"
        android:text="@string/place_order"
        android:textColor="@color/txtWhite"
        android:layout_marginTop="@dimen/margin_5dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/btn_place_order"
        android:layout_alignLeft="@id/txt_quantity_title"
        android:layout_alignStart="@id/txt_quantity_title"
        android:layout_alignRight="@id/txt_plus"
        android:layout_alignEnd="@id/txt_plus"
        android:layout_marginTop="@dimen/margin_5dp"
        android:background="@color/txtGrey" />

    <TextView
        android:id="@+id/txt_special_instructions_example"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/view2"
        android:layout_alignLeft="@id/txt_quantity_title"
        android:layout_alignStart="@id/txt_quantity_title"
        android:layout_alignRight="@id/txt_plus"
        android:layout_alignEnd="@id/txt_plus"
        android:text="@string/special_instructions_example" />

    <EditText
        android:id="@+id/txt_special_instructions"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@id/txt_special_instructions_example"
        android:layout_alignLeft="@id/txt_quantity_title"
        android:layout_alignStart="@id/txt_quantity_title"
        android:layout_alignRight="@id/txt_plus"
        android:layout_alignEnd="@id/txt_plus"
        android:background="@drawable/grey_border"
        android:inputType="textCapSentences" />

    <TextView
        android:id="@+id/txt_special_instructions_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/txt_special_instructions"
        android:layout_alignLeft="@id/txt_quantity_title"
        android:layout_alignStart="@id/txt_quantity_title"
        android:layout_alignRight="@id/txt_plus"
        android:layout_alignEnd="@id/txt_plus"
        android:layout_marginTop="@dimen/margin_5dp"
        android:singleLine="true"
        android:text="@string/special_instructions"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/txt_special_instructions_title"
        android:layout_alignLeft="@id/txt_quantity_title"
        android:layout_alignStart="@id/txt_quantity_title"
        android:layout_alignRight="@id/txt_plus"
        android:layout_alignEnd="@id/txt_plus"
        android:layout_marginTop="@dimen/margin_5dp"
        android:background="@color/txtGrey" />

    <ListView
        android:id="@+id/list_menu_options"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/txt_quantity_title"
        android:layout_alignStart="@id/txt_quantity_title"
        android:layout_alignRight="@id/txt_plus"
        android:layout_alignEnd="@id/txt_plus"
        android:layout_above="@id/view3"
        android:layout_below="@id/txt_additional_options_title"
        android:layout_marginTop="@dimen/margin_5dp" />

</RelativeLayout>
