<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg_color" >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@color/app_bg_color" 
    android:id="@+id/rl_1" >
    <com.techfiesta.asaan.utility.RoundedImageView
        android:id="@+id/image_food_item"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:padding="1dp"
        android:contentDescription="@string/menu_category_title"
        android:layout_marginLeft="10dp"
        
         />

    <TextView
        android:id="@+id/txt_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/image_food_item"
        android:layout_toLeftOf="@id/tv_item_price"
		android:layout_marginLeft="@dimen/margin_10dp"
        android:ellipsize="end"
        android:singleLine="false"
        android:textSize="16dp"
        android:text="@string/food_menu_item_name"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_item_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/txt_item_name"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="@dimen/margin_10dp"
        android:text="@string/food_menu_item_price"
        android:layout_gravity="right"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_item_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/txt_item_name"
        android:layout_below="@id/txt_item_name"
        android:layout_toLeftOf="@id/txt_item_price"
        android:layout_marginRight="@dimen/margin_5dp"
        android:layout_marginTop="@dimen/margin_5dp"
        android:layout_marginBottom="@dimen/margin_5dp"
        android:text="@string/food_menu_item_desc" />

    <!-- <TextView
        android:id="@+id/txt_item_ordered_today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/txt_item_name"
        android:layout_below="@id/txt_item_desc"
        android:text="@string/food_menu_item_ordered_count" 
        android:textStyle="italic"
        android:textColor="@color/txtBlue" /> -->

    <TextView
        android:id="@+id/txt_item_ranking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true" />
    
    <ImageView
        android:id="@+id/image_vegetarian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txt_item_name"
        android:layout_toRightOf="@+id/txt_item_name"
        android:contentDescription="@string/food_is_vegetarian"
        android:visibility="gone"
        android:src="@drawable/menu_vegetarian" />

    <ImageView
        android:id="@+id/image_spicy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/image_vegetarian"
        android:layout_toRightOf="@+id/image_vegetarian"
        android:contentDescription="@string/food_is_spicy"
        android:visibility="gone"
        android:src="@drawable/menu_spicy" />

    <ImageView
        android:id="@+id/image_glutenfree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/image_spicy"
        android:layout_toRightOf="@+id/image_spicy"
        android:contentDescription="@string/food_is_gluten_free"
        android:visibility="gone"
        android:src="@drawable/menu_glutenfree" />
    </RelativeLayout>

     <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:background="@color/khaki_text" />
     <RelativeLayout
        android:id="@+id/rl_stats"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/app_bg_color"
        android:layout_below="@id/rl_1"
       android:layout_margin="10dp">

         <ImageView
             android:id="@+id/iv_visitors"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_alignParentLeft="true"
             android:layout_margin="5dp" 
             android:src="@drawable/numbervisitors"/>
        <TextView
            android:id="@+id/tv_visitors"
            android:layout_width="wrap_content"
            android:layout_toRightOf="@+id/iv_visitors"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textSize="12dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:text="7" />
    
        <TextView
            android:id="@+id/tv_likes"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textSize="12dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:text="7" />
         <ImageView
             android:id="@+id/iv_likes"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_marginTop="4dp"
             android:layout_marginRight="3dp"
             android:layout_toLeftOf="@+id/tv_likes" 
             android:src="@drawable/numberlikes"/>
    </RelativeLayout>
   
</RelativeLayout>
